# talk-confident

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260526_0001_initial.py  20260527_0002_pronouns_and_wordlist.py
app/: __init__.py  config.py  deps.py  main.py  security.py
app/db/: base.py  models.py
app/prompts/: __init__.py  curriculum.py  evaluation.py  persona.py  summarization.py  wordlist.py
app/routers/: auth.py  curriculum.py  practice.py  progress.py  wordlist.py
app/schemas/: __init__.py  auth.py  curriculum.py  practice.py  progress.py  wordlist.py
app/services/: __init__.py  ai_service.py  audio_service.py  cache_service.py  keepalive.py  progress_service.py  wordlist_service.py
app/utils/: tokens.py
docs/: API.md
tests/: conftest.py  test_audio_service.py  test_auth.py  test_curriculum.py  test_meeting_prep.py  test_practice.py  test_progress_endpoint.py  test_progress_service.py  test_prompts.py
